fix lazy loadng bug in store and fix tests

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -374,7 +374,7 @@
       "CUSTOMER_DETAILS": "Customer Details",
       "LOAD_LESS": "Load Less",
       "LOAD_MORE": "Load More",
-      "NO_IMAGES": "There are no images for the selected customer. Kindly click on 'Upload Document' to upload image(s)",
+      "NO_IMAGES": "There are no images for the project. Kindly click on 'Upload Document' to upload image(s)",
       "PICTURES": "Pictures",
       "UPLOAD_DOCUMENTS": "Upload Document"
     },
